// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderRadius": 0,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "px_sans_nouveaux",
            "paddingRight": 30,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "red",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "green",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "blue",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "purple",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "brown",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "yellow",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with activePower and items) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderRadius": 0,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "px_sans_nouveaux",
            "paddingRight": 30,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "black",
            "flex": 1,
            "padding": 5,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#00ff00",
              "borderRadius": 0,
              "flex": 1,
              "padding": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderRadius": 0,
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(2, 255, 255, 1)",
                  "borderRadius": 0,
                  "flex": 1,
                  "height": "100%",
                  "position": "absolute",
                  "width": "2%",
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "elevation": 6,
                  "flexDirection": "row",
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#00ff00",
                    "flex": 2,
                    "fontFamily": "px_sans_nouveaux",
                    "marginLeft": 4,
                  }
                }
              >
                PowerName
                ...
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#00ff00",
                    "flex": 2,
                    "fontFamily": "px_sans_nouveaux",
                    "marginTop": 1,
                  }
                }
              >
                00:00:09
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginTop": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#00ff00",
                      "fontFamily": "px_sans_nouveaux",
                    }
                  }
                >
                  3
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#00ff00",
                      "fontFamily": "px_sans_nouveaux",
                    }
                  }
                >
                  /
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#00ff00",
                      "fontFamily": "px_sans_nouveaux",
                    }
                  }
                >
                  4
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "red",
                  "borderColor": "red",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "green",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "blue",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "purple",
                  "borderColor": "purple",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "brown",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "yellow",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with activePower) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderRadius": 0,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "px_sans_nouveaux",
            "paddingRight": 30,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "black",
            "flex": 1,
            "padding": 5,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#00ff00",
              "borderRadius": 0,
              "flex": 1,
              "padding": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "black",
                "borderRadius": 0,
                "flex": 1,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(2, 255, 255, 1)",
                  "borderRadius": 0,
                  "flex": 1,
                  "height": "100%",
                  "position": "absolute",
                  "width": "2%",
                }
              }
            />
            <View
              style={
                Object {
                  "backgroundColor": "transparent",
                  "elevation": 6,
                  "flexDirection": "row",
                  "height": "100%",
                  "width": "100%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#00ff00",
                    "flex": 2,
                    "fontFamily": "px_sans_nouveaux",
                    "marginLeft": 4,
                  }
                }
              >
                PowerName
                ...
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#00ff00",
                    "flex": 2,
                    "fontFamily": "px_sans_nouveaux",
                    "marginTop": 1,
                  }
                }
              >
                00:00:09
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                    "flexDirection": "row",
                    "marginTop": 1,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#00ff00",
                      "fontFamily": "px_sans_nouveaux",
                    }
                  }
                >
                  3
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#00ff00",
                      "fontFamily": "px_sans_nouveaux",
                    }
                  }
                >
                  /
                </Text>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "#00ff00",
                      "fontFamily": "px_sans_nouveaux",
                    }
                  }
                >
                  4
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "red",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "green",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "blue",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "purple",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "brown",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "yellow",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Player (with items) => renders correctly 1`] = `
<View
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#00ff00",
        "borderColor": "#00ff00",
        "borderRadius": 0,
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "column",
        "height": 100,
        "margin": 5,
        "marginBottom": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={undefined}
        style={
          Object {
            "backgroundColor": "black",
            "borderRadius": 0,
            "flex": 1,
            "height": 21,
            "margin": 2,
            "marginBottom": 1,
            "width": 10,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "black",
            "flex": 9,
            "fontFamily": "px_sans_nouveaux",
            "paddingRight": 30,
            "textAlign": "center",
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "black",
          "borderRadius": 0,
          "borderWidth": 0.5,
          "flex": 3,
          "flexDirection": "column",
          "margin": 1,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "red",
                  "borderColor": "red",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "green",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "blue",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "purple",
                  "borderColor": "purple",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "brown",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "black",
                "borderColor": "black",
                "borderRadius": 0,
                "borderWidth": 1,
                "height": 14,
                "margin": 4,
                "width": 14,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "black",
                  "borderColor": "yellow",
                  "borderWidth": 1,
                  "height": 8,
                  "marginTop": 2,
                  "transform": Array [
                    Object {
                      "rotate": "45deg",
                    },
                  ],
                  "width": 8,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
